# freakengine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
content/raw/scenes/: test_scene.json
engine/assets/: CMakeLists.txt
engine/assets/include/freak/assets/: AssetManager.h
engine/assets/src/: AssetManager.cpp
engine/audio/: CMakeLists.txt
engine/audio/include/freak/audio/: AudioSystem.h
engine/audio/src/: AudioSystem.cpp
engine/core/: CMakeLists.txt
engine/core/include/freak/core/: Assert.h  Log.h  Profiler.h  Timer.h  Types.h
engine/core/src/: Log.cpp  Timer.cpp
engine/physics/: CMakeLists.txt
engine/physics/include/freak/physics/: CollisionWorld.h  PhysicsWorld.h
engine/physics/src/: CollisionWorld.cpp  PhysicsWorld.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/freak/platform/: App.h  Input.h  Window.h
engine/platform/src/: App.cpp  Input.cpp  Window.cpp
engine/render/: CMakeLists.txt
engine/render/include/freak/render/: Camera.h  CameraData.h  DebugUI.h  ForwardPass.h  MeshCache.h  RenderDevice.h  Vertex.h
engine/render/shaders/src/: fs_forward.sc  vs_forward.sc
engine/render/shaders/varying/: varying.def.sc
engine/render/src/: Camera.cpp  DebugUI.cpp  ForwardPass.cpp  MeshCache.cpp  RenderDevice.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/freak/scene/: Components.h  MeshTypes.h  Scene.h  SceneLighting.h  SceneLoader.h
engine/scene/src/: Scene.cpp  SceneLoader.cpp
framework/: CMakeLists.txt
framework/include/freak/framework/: FPSController.h  Framework.h  GameplayCamera.h  InputActions.h
framework/src/: FPSController.cpp  Framework.cpp  GameplayCamera.cpp  InputActions.cpp
game/: CMakeLists.txt
game/src/: main.cpp
scripts/: build_capture.bat  build_develop.bat  build_only.bat  compile_shaders.bat  link_deps.ps1  setup_submodules.bat
tools/asset_baker/: CMakeLists.txt
tools/asset_baker/src/: main.cpp
